--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,62 @@
 body{
-    background-image: url(images/index-bg.jpg);
+    background-image: url(images/bg.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    background-color: #bfb7d4;
-    min-height: auto;
+    background-color: #ceb6c0;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-container {
+    background-color: rgb(219, 192, 151, 0.50);
+    border-radius: 12px;
+    padding: 40px;
+    box-shadow: 0 4px 12px #2b1502;
+    width: 75%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: #b37c65;
+    font-family: 'Lucida Handwriting';
+    -webkit-text-stroke: 0.5px black;
+    font-variant-ligatures: contextual;
+}
+
+@media (max-width: 768px) {
+    .container {
+        padding: 20px;
+    }
+}
+
+.login-btn {
+    background-color: #2b1502;
+    cursor: pointer;
+    color: whitesmoke;
+}
+
+.login-btn:hover {
+    background-color: #432b15;
+}
+
+.login-btn:active {
+    background-color: #140a00;
+    transform: translateY(3px);
+}
+
+.guest-btn {
+    cursor: pointer;
+}
+
+.guest-btn:hover {
+    background-color: rgb(92, 63, 63);
+}
+
+.guest-btn:active {
+    background-color: rgb(82, 76, 81);
+    transform: translateY(3px);
 }
