--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body{
     align-items: center;
 }
 
-.flex-container {
+.container, .login-container {
     background-color: rgb(219, 192, 151, 0.50);
     border-radius: 12px;
     padding: 40px;
@@ -59,4 +59,20 @@ body{
 .guest-btn:active {
     background-color: rgb(82, 76, 81);
     transform: translateY(3px);
+}
+
+.login-container label {
+    display: block;
+    text-align: left;
+    margin-top: 10px;
+    color: #333;
+}
+
+.login-container input{
+    width: 100%;
+    padding: 8px;
+    margin-top: 3px;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    justify-content: right;
 }
